--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="nl">
+	<head>
+	  <title>Het grootste aanbod in duikreizen, natuurlijk bij Duikreizen.nl</title>
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	  <script>
+		
+	  </script>
+	  <style>
+		
+	  </style>
+	</head>
+	<body>
+	  
+		<div class="container-fluid">
+		  <h1>My First Bootstrap Page</h1>      
+		  <p>This part is inside a .container-fluid class.</p> 
+		  <p>The .container class provides a full width container, spanning the entire width of the viewport.</p>           
+		</div>
 
+	</body>
 </html>
