--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="nl">
 	<head>
-	  <title>Het grootste aanbod in duikreizen, natuurlijk bij Duikreizen.nl</title>
-	  <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	  <script>
-		
-	  </script>
-	  <style>
-		
-	  </style>
+		<title>Het grootste aanbod in duikreizen, natuurlijk bij Duikreizen.nl</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script>
+
+		</script>
+		<style>
+
+		</style>
 	</head>
 	<body>
-	  
-		<div class="container-fluid">
-		  <h1>My First Bootstrap Page</h1>      
-		  <p>This part is inside a .container-fluid class.</p> 
-		  <p>The .container class provides a full width container, spanning the entire width of the viewport.</p>           
+		<div class="top">
+			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default">There should be text here</a>
+			<div class="dropdown">
+				<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tutorials<span class="caret"></span></button>
+				<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
+					<li role="presentation" class="divider"></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+				</ul>
+			</div>
 		</div>
-
+		<div class="container-fluid">
+			<h1>My First Bootstrap Page</h1>      
+			<p>This part is inside a .container-fluid class.</p> 
+			<p>The .container class provides a full width container, spanning the entire width of the viewport.</p>           
+		</div>
 	</body>
 </html>
