--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<body>
 		<div class="top">
 			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default">There should be text here</a>
+			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default">There should be text here</a>
 			<div class="dropdown">
 				<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tutorials<span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
