--- a/index.html
+++ b/index.html
@@ -15,24 +15,37 @@
 		</style>
 	</head>
 	<body>
-		<div class="top">
-			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default">There should be text here</a>
-			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default">There should be text here</a>
-			<div class="dropdown">
+		<!-- Start Header -->
+		<div class="top" style="margin: 5px;">
+			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default">Subscribe</a>
+			<div class="dropdown" style="display: inline-block;">
 				<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tutorials<span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
-					<li role="presentation" class="divider"></li>
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Facebook</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Twitter</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Google +</a></li>
+				</ul>
+			</div>
+			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default pull-right" style="margin-left: 4px;">RSS</a>
+			<div class="dropdown pull-right" style="display: inline-block;">
+				<button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">Vertaal<span class="caret"></span></button>
+				<ul class="dropdown-menu" role="menu" aria-labelledby="menu2">
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nederlands</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">English</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Français</a></li>
 				</ul>
 			</div>
 		</div>
-		<div class="container-fluid">
-			<h1>My First Bootstrap Page</h1>      
-			<p>This part is inside a .container-fluid class.</p> 
-			<p>The .container class provides a full width container, spanning the entire width of the viewport.</p>           
+		<!-- Stop Header -->
+		
+		<!-- Start Content -->
+		<div style="width: 80%;" class="container-fluid">
+			
+			<div> 
+				<!-- Plaatje, Text, link -->
+			</div>
+			
 		</div>
+		<!-- End Content -->
 	</body>
 </html>
