--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 		</style>
 	</head>
-	<body>
+	<body style="background-color: rgba(170, 215, 255, 1);">
 		<!-- Start Header -->
-		<div class="top" style="margin: 5px;">
+		<div class="top" style="padding: 5px; background-color: rgba(245, 245, 245, 0.5); margin-bottom: 5px;">
 			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default">Subscribe</a>
 			<div class="dropdown" style="display: inline-block;">
-				<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tutorials<span class="caret"></span></button>
+				<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Social Media<span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
 					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Facebook</a></li>
 					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Twitter</a></li>
@@ -39,7 +39,10 @@
 		<!-- Stop Header -->
 		
 		<!-- Start Content -->
-		<div style="width: 80%;" class="container-fluid">
+		<div style="width: 80%; height: 100%; background-color: rgba(255, 255, 255, 0.7);" class="container-fluid">
+			<div style="width: 90%;" class="container-fluid">
+				<img src="http://media.duikreizen.nl/images/header.gif" style="width: 100%;" alt="duikreizen.nl" />
+			</div>
 			
 			<div> 
 				<!-- Plaatje, Text, link -->
