--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 		</script>
 		<style>
-
+			html, body {
+				height: 100%;
+			}
 		</style>
 	</head>
 	<body style="background-color: rgba(170, 215, 255, 1);">
@@ -39,11 +41,16 @@
 		<!-- Stop Header -->
 		
 		<!-- Start Content -->
-		<div style="width: 80%; height: 100%; background-color: rgba(255, 255, 255, 0.7);" class="container-fluid">
-			<div style="width: 90%;" class="container-fluid">
+		<div style="width: 80%; background-color: rgba(255, 255, 255, 0.7); min-height:80%; position: relative;" class="container-fluid">
+			<!-- Start Top content -->
+			<p style="margin: 10px;">Prachtige duik arrangementen voor uitstekende prijzen!
+			<a style="color: gray;" href="." target="_blank" class="pull-right">View this email in your browser</a></p>
+			<div style="margin-top: 5px; margin-bottom: 10px; padding: 0px;" class="container-fluid">
 				<img src="http://media.duikreizen.nl/images/header.gif" style="width: 100%;" alt="duikreizen.nl" />
 			</div>
+			<!-- End Top content -->
 			
+			<!-- Start Content -->
 			<div> 
 				<div style="float: left; width: 140px; height: 110px;">
 					<div style="text-align:center">
@@ -55,7 +62,20 @@
 					<div style="text-align:center;">
 						<a href="http://www.duikreizen.nl/vakantie/Egypte/Rode-Zee/Marsa-Alam/Hotel-Tulip-Resort/4648" target="_blank" rel="nofollow"><img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" width="257"/></a>
 					</div>
+				</div>
 			</div>
+			<!-- End Content -->
+			
+			<!-- Start Footer Content -->
+			<div style="width: 100%; padding-bottom: 10px; display: block;">
+				<div style="width: 100%; height: 1px; margin-bottom: 5px;background-color: #428bca;"></div>
+				<a style="text-decoration: none;">Copyrigth &copy; 2015 VakantieStunt B.V., Onder voorbehoud van beschikbaarheid</a>
+				<div style="width: 100%; height: 1px; margin-bottom: 5px;background-color: #428bca;"></div>
+				<a style="text-decoration: none;">Vraag vrijblijvend een offerte aan bij Duikreizen.nl. Wij stellen graag een offerte voor u op voor groepreizen, specials of reizen met een speciale Accommodatie zoals rolstoelgebruikers. Wenst u een mogelijkheid die niet vermeld staat op onze website dan kijken we graag doormiddel van een offerte met u mee.</a>
+				<div style="width: 100%; height: 1px; margin-bottom: 5px;background-color: #428bca;"></div>
+				<a style="text-decoration: none;">Stelt u het niet op prijs om regelmatig door ons op de hoogte te worden gehouden? Meldt u dan hier af.</a>
+			</div>
+			<!-- End Footer Content -->
 			
 		</div>
 		<!-- End Content -->
