Added content divs

--- a/index.html
+++ b/index.html
@@ -44,17 +44,12 @@
 				<img src="http://media.duikreizen.nl/images/header.gif" style="width: 100%;" alt="duikreizen.nl" />
 			</div>
 			
-			<div> 
-				<div style="float: left; width: 140px; height: 110px;">
-					<div style="text-align:center">
-						<a href="http://www.duikreizen.nl/vakantie/Egypte/Rode-Zee/Marsa-Alam/Hotel-Tulip-Resort/4648" target="_blank" rel="nofollow"><img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" width="257" height="90" border="0" alt="333Travel - De individuele verre reizen specialist" /></a>
-					</div>
-				</div>
-					
-				<div style="float: left; width: 140px; height: 110px;">
-					<div style="text-align:center;">
-						<a href="http://www.duikreizen.nl/vakantie/Egypte/Rode-Zee/Marsa-Alam/Hotel-Tulip-Resort/4648" target="_blank" rel="nofollow"><img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" width="257"/></a>
-					</div>
+			<div style="width: 90%;" class="container-fluid">
+				<img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+			</div>
+			
+			<div style="width: 90%;" "display: inline" class="container-fluid">
+				<img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
 			</div>
 			
 		</div>
