--- a/index.html
+++ b/index.html
@@ -63,13 +63,32 @@
 			<!-- End Content -->
 			
 			<!-- Start Footer Content -->
-			<div style="width: 100%; padding-bottom: 10px; display: block;">
-				<div style="width: 100%; height: 1px; margin-bottom: 5px;background-color: #428bca;"></div>
-				<a style="text-decoration: none;">Copyrigth &copy; 2015 VakantieStunt B.V., Onder voorbehoud van beschikbaarheid</a>
-				<div style="width: 100%; height: 1px; margin-bottom: 5px;background-color: #428bca;"></div>
-				<a style="text-decoration: none;">Vraag vrijblijvend een offerte aan bij Duikreizen.nl. Wij stellen graag een offerte voor u op voor groepreizen, specials of reizen met een speciale Accommodatie zoals rolstoelgebruikers. Wenst u een mogelijkheid die niet vermeld staat op onze website dan kijken we graag doormiddel van een offerte met u mee.</a>
-				<div style="width: 100%; height: 1px; margin-bottom: 5px;background-color: #428bca;"></div>
-				<a style="text-decoration: none;">Stelt u het niet op prijs om regelmatig door ons op de hoogte te worden gehouden? Meldt u dan hier af.</a>
+			<div style="width: 100%; margin-top: 10px; padding-bottom: 10px; display: block; background-color: rgba(255, 255, 255, 0.8);border: 5px solid rgba(255, 255, 255, 0.8);">
+				<div style="width: 100%; height: 1px; margin-bottom: 10px; margin-top: 10px; background-color: #428bca;"></div>
+				<a style="text-decoration: none;">Copyrigth &copy; 2015 VakantieStunt B.V., Onder voorbehoud van beschikbaarheid</a> <br />
+				<a href="http://vakantiestunt.nl/" target="_blank"> 
+					<img style="margin-bottom: 4px;" src="http://www.aanbiedingcyprus.nl/images/vakantiestunt.jpg" alt="Duikreizen VakantieStunt" />
+				</a>
+				<a href="http://duikreizen.nl/" target="_blank">
+					<img style="margin-bottom: 4px;" src="http://www.aanbiedingcyprus.nl/images/duikreizen.jpg" alt="Duikreizen" />
+				</a>
+				<a href="http://airticket.nl/" target="_blank">
+					<img style="margin-bottom: 4px;" src="http://www.aanbiedingcyprus.nl/images/airticket.jpg" alt="Duikreizen AirTicket" />
+				</a>
+				<a href="http://avontuurreis.nl/" target="_blank">
+					<img style="margin-bottom: 4px;" src="http://www.aanbiedingcyprus.nl/images/avontuurreis.jpg" alt="Duikreizen Avontuurreis" />
+				</a>
+				<a href="http://aanbiedingreizen.nl/" target="_blank">
+					<img style="margin-bottom: 4px;" src="http://www.aanbiedingcyprus.nl/images/aanbiedingreizen.jpg" alt="Duikreizen AanbiedingReizen" />
+				</a>
+				
+				<div style="width: 100%; height: 1px; margin-bottom: 10px; margin-top: 10px; background-color: #428bca;"></div>
+				<a style="text-decoration: none;">
+					Vraag vrijblijvend een offerte voor een groeps
+				</a>
+				
+				<div style="width: 100%; height: 1px; margin-bottom: 10px; margin-top: 10px; background-color: #428bca;"></div>
+				<a style="text-decoration: none;">Stelt u het niet op prijs om regelmatig door ons op de hoogte te worden gehouden? <a href=".">Meldt u dan hier af.</a></a>
 			</div>
 			<!-- End Footer Content -->
 			
