--- a/index.html
+++ b/index.html
@@ -51,13 +51,33 @@
 			<!-- End Top content -->
 
 			<!-- Start Content -->
-			<div> 
-				<div style="width: 90%;" class="container-fluid">
+			<div class="row"> 
+				<div  class="col-sm-4">
 					<img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<p>Egypte - Marsa Alam
+						Hotel Tulip Resort 4*
+						All Inclusive vanaf 449,-<p>
 				</div>
 
-				<div style="width: 90%;" "display: inline" class="container-fluid">
-					<img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+				<div  class="col-sm-4">
+					<img src="http://media.duikreizen.nl/prodimg/accommodations/8379/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<p>Egypte - Marsa Alam
+						Hotel Tulip Resort 4*
+						All Inclusive vanaf 449,-<p>
+				</div>
+				
+					<div  class="col-sm-4">
+					<img href src="http://media.duikreizen.nl/prodimg/accommodations/8182/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<p>Egypte - Marsa Alam
+						Hotel Tulip Resort 4*
+						All Inclusive vanaf 449,-<p>
+				</div>
+				
+					<div  class="col-sm-4">
+					<img src="http://media.duikreizen.nl/prodimg/accommodations/8406/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<p>Egypte - Marsa Alam
+						Hotel Tulip Resort 4*
+						All Inclusive vanaf 449,-<p>
 				</div>
 			</div>
 			<!-- End Content -->
