Added br en href in content divs

--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
 			<!-- Start Content -->
 			<div class="row"> 
 				<div  class="col-sm-4">
-					<img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<A HREF="http://www.duikreizen.nl/"target="_blank"><img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p>Egypte - Marsa Alam
-						Hotel Tulip Resort 4*
-						All Inclusive vanaf 449,-<p>
+						<br>Hotel Tulip Resort 4*
+						<br>All Inclusive vanaf 449,-<p>
 				</div>
 
 				<div  class="col-sm-4">
-					<img src="http://media.duikreizen.nl/prodimg/accommodations/8379/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<A HREF="http://www.duikreizen.nl/"target="_blank"><img href="http://www.duikreizen.nl/" src="http://media.duikreizen.nl/prodimg/accommodations/8379/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p>Egypte - Marsa Alam
-						Hotel Tulip Resort 4*
-						All Inclusive vanaf 449,-<p>
+						<br>Hotel Tulip Resort 4*
+						<br>All Inclusive vanaf 449,-<p>
 				</div>
 				
 					<div  class="col-sm-4">
-					<img href src="http://media.duikreizen.nl/prodimg/accommodations/8182/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<A HREF="http://www.duikreizen.nl/"target="_blank"><img href="http://www.duikreizen.nl/" src="http://media.duikreizen.nl/prodimg/accommodations/8182/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p>Egypte - Marsa Alam
-						Hotel Tulip Resort 4*
-						All Inclusive vanaf 449,-<p>
+						<br>Hotel Tulip Resort 4*
+						<br>All Inclusive vanaf 449,-<p>
 				</div>
 				
 					<div  class="col-sm-4">
-					<img src="http://media.duikreizen.nl/prodimg/accommodations/8406/01.jpg" class="img-thumbnail" alt="duikreizen.nl" />
+					<A HREF="http://www.duikreizen.nl/"target="_blank"><img href="http://www.duikreizen.nl/" src="http://media.duikreizen.nl/prodimg/accommodations/8406/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p>Egypte - Marsa Alam
-						Hotel Tulip Resort 4*
-						All Inclusive vanaf 449,-<p>
+						<br>Hotel Tulip Resort 4*
+						<br>All Inclusive vanaf 449,-<p>
 				</div>
 			</div>
 			<!-- End Content -->
