--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 			<div class="dropdown" style="display: inline-block;">
 				<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Social Media<span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Facebook</a></li>
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Twitter</a></li>
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Google +</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="https://facebook.com/MakerTimm">Facebook</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="https://twitter.com/MakerTim">Twitter</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="https://google.nl/+MakerTim/">Google +</a></li>
 				</ul>
 			</div>
-			<a href="http://www.youtube.com/subscription_center?add_user=makertim" class="btn btn-default pull-right" style="margin-left: 4px;">RSS</a>
+			<a href="http://nl.wikipedia.org/wiki/Really_Simple_Syndication" class="btn btn-default pull-right" style="margin-left: 4px;">RSS</a>
 			<div class="dropdown pull-right" style="display: inline-block;">
 				<button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">Vertaal<span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu" aria-labelledby="menu2">
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nederlands</a></li>
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">English</a></li>
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Français</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="translate.google.be">Nederlands</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="translate.google.be">English</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="translate.google.be">Français</a></li>
 				</ul>
 			</div>
 		</div>
@@ -104,9 +104,11 @@
 				
 				<div style="width: 100%; height: 1px; margin-bottom: 10px; margin-top: 10px; background-color: #428bca;"></div>
 				<a style="text-decoration: none;">
-					Vraag vrijblijvend een offerte voor een groeps
-				</a>
-				
+					Vraag hier uw reisofferte aan bij Duikreizen.nl. 
+					Kunt u uw gewenste reis niet terugvinden in het reisaanbod van duikreizen.nl of heeft u een aanvraag voor een groepsreis of een individuele reis op maat? 
+					Wij denken graag met u mee en naar aanleiding van uw reiswensen stellen wij met veel plezier geheel kosteloos en vrijblijvend een reisvoorstel voor u op.
+				</a><br /><br />
+				<a href="http://aanbiedingreizen.nl/offerte/" style="width: 100%;" class="btn btn-success text-center">Vraag hier een vrijblijvende offerte</a><br />
 				<div style="width: 100%; height: 1px; margin-bottom: 10px; margin-top: 10px; background-color: #428bca;"></div>
 				<a style="text-decoration: none;">Stelt u het niet op prijs om regelmatig door ons op de hoogte te worden gehouden? <a href=".">Meldt u dan hier af.</a></a>
 			</div>
