--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 			html, body {
 				height: 100%;
 			}
+			
 			u {
 				text-decoration: underline;
-			}			
+			}		
+			
+			p {
+				margin-left: 7px;
+			}		
+				
 		</style>
 	</head>
 	<body style="background-color: rgba(170, 215, 255, 1);">
@@ -54,8 +60,8 @@
 			<!-- End Top content -->
 
 			<!-- Start Content -->
-			<div class="row"> 
-				<div class="col-sm-4" style=""/>
+			<div class="row" style="margin: auto;"> 
+				<div class="col-sm-4"/>
 					<a href="http://www.duikreizen.nl/"target="_blank"><img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p>Egypte - Marsa alam
 						<br>Hotel Tulip Resort 4*
