--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
 					<a href="http://www.duikreizen.nl/" target="_blank"><img src="http://media.duikreizen.nl/prodimg/accommodations/4648/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p style="margin-left: 7px;">Egypte - Marsa alam
 						<br>Hotel Tulip Resort 4*
-						<br>all Inclusive vanaf <u><b>449,-</b></U><p>
+						<br>all Inclusive vanaf <u><b>449,-</b></u><p>
 				</div>
 
 				<div class="col-sm-4">
 					<a href="http://www.duikreizen.nl/" target="_blank"><img src="http://media.duikreizen.nl/prodimg/accommodations/8379/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p style="margin-left: 7px;">Egypte - Marsa alam
 						<br>Hotel Tulip Resort 4*
-						<br>all Inclusive vanaf <u><b>449,-</b></U><p>
+						<br>all Inclusive vanaf <u><b>449,-</b></u><p>
 				</div>
 				
 				<div class="col-sm-4">
 					<a href="http://www.duikreizen.nl/" target="_blank"><img src="http://media.duikreizen.nl/prodimg/accommodations/8182/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p style="margin-left: 7px;">Egypte - Marsa alam
 						<br>Hotel Tulip Resort 4*
-						<br>all Inclusive vanaf <u><b>449,-</b></U><p>
+						<br>all Inclusive vanaf <u><b>449,-</b></u><p>
 				</div>
 				
 					<div class="col-sm-4">
 					<a href="http://www.duikreizen.nl/" target="_blank"><img src="http://media.duikreizen.nl/prodimg/accommodations/8406/01.jpg" class="img-thumbnail" alt="duikreizen.nl" /></a>
 					<p style="margin-left: 7px;">Egypte - Marsa alam
 						<br>Hotel Tulip Resort 4*
-						<br>all Inclusive vanaf <u><b>449,-</b></U><p>
+						<br>all Inclusive vanaf <u><b>449,-</b></u><p>
 				</div>
 			</div>
 			<!-- End Content -->
